<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button

        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:layout_gravity="right"
        android:onClick="exit"


        />
    <TableLayout

        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="10dp"

        >



    <TableRow>

        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="@string/login"


            />

        <EditText
            android:id="@+id/editTextLoginAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
           />


    </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"


               />

            <EditText
                android:id="@+id/editTextPasswordAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />


        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_weight="1"/>


        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonSavePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_weight="1"

                />
            <Button

                android:id="@+id/buttonRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textAllCaps="false"
                android:gravity="center"
                android:layout_weight="1"


                />
        </TableRow>


    </TableLayout>


</LinearLayout>