<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"

    android:orientation="vertical"
    tools:context=".Recover">


    <EditText
        android:id="@+id/editTextSaveEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mail" />

    <EditText
        android:id="@+id/editTextSavePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pin" />

    <Button
        android:id="@+id/buttonEndSavePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery" />



</LinearLayout>