<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactContent">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="54dp"
        android:layout_toStartOf="@+id/imageButtonCall"
        android:text="TextView" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="163dp"
        android:layout_marginTop="31dp"

        android:layout_marginEnd="53dp"
        android:layout_toStartOf="@+id/imageButtonCall"
        android:text="TextView" />


    <Button
        android:id="@+id/buttonModifyContact"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/buttonAddBirth"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/buttonDeleteContact"
        android:text="@string/modyfi" />

    <Button
        android:id="@+id/buttonDeleteContact"
        android:layout_width="120dp"
        android:layout_height="50dp"

        android:layout_above="@+id/buttonMoveContact"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/delete" />

    <ImageButton
        android:id="@+id/imageButtonCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="54dp"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <Button
        android:id="@+id/buttonMoveContact"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="180dp"
        android:text="@string/move" />

    <Button
        android:id="@+id/buttonAddBirth"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="180dp"
        android:layout_toStartOf="@+id/buttonMoveContact"
        android:text="@string/add" />

</RelativeLayout>